--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
       "name": "Fallen Robot",
       "description": "Telegram Group Management Bot.",
-      "logo": "https://te.legra.ph/file/72e135da30a1a349f2844.jpg",
+      "logo": "https://te.legra.ph/file/0efb5bf3b0cb4edeee9f3.jpg",
       "keywords": [
          "telegram",
          "modular",
@@ -61,7 +61,7 @@
       "OWNER_ID": {
          "description": "Your user ID as an integer.",
          "required": true,
-         "value": "1356469075"
+         "value": "5846541835"
       },
       "START_IMG": {
          "description": "Telegraph link of the image which will be shown at start command.",
@@ -71,12 +71,12 @@
       "SUPPORT_CHAT": {
          "description": "Your Telegram support group chat username where your users will go and bother you with shit But be like: MyGroupChatUsernameBlah. If this ever points to Fallen Support than consider you made an enemy.",
          "required": true,
-         "value": "DevilsHeavenMF"
+         "value": "X_TEAM_IMMORTALS_X"
       },
       "TIME_API_KEY": {
          "description": "Required for timezone information. Get yours from https://timezonedb.com/api",
          "required": true,
-         "value": ""
+         "value": "aisa/Kolkata GMT +5:30"
       },
       "TOKEN": {
          "description": "Get bot token from @BotFather on TG",
